@@ -1,4 +1,4 @@
-## $Id: Makefile.am 49666 2019-01-10 23:03:46Z karl $
+## $Id: Makefile.am 50656 2019-03-30 10:13:17Z hironobu $
 ## Makefile.am for the TeX Live subdirectory texk/web2c/man/
 ## Copyright 2018 Karl Berry <tex-live@tug.org>
 ## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
@@ -55,8 +55,10 @@ EXTRA_DIST += $(pdftex_man_sources)
 if PTEX
 man_sources += ptex.man
 man1_links += ptex:eptex ptex:euptex ptex:uptex
+man_sources += ppltotf.man ptftopl.man
+man1_links += ppltotf:uppltotf ptftopl:uptftopl
 endif PTEX
-EXTRA_DIST += ptex.man
+EXTRA_DIST += ptex.man ppltotf.man ptftopl.man
 
 if LUATEX
 man_sources += luatex.man
